infra/prometheus-fwd/service-k8s2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    prometheus: prometheus-k8s2
  name: prometheus-k8s2
  namespace: openshift-monitoring
spec:
  ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: web
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app: prometheus
    prometheus: k8s
